--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -181,165 +181,198 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Oceanic Next)
+# Colors (Seafoam-Pastel)
 colors:
   # Default colors
   primary:
-    background: '#1b2b34'
-    foreground: '#d8dee9'
+    background: "#243435"
+    foreground: "#d4e7d4"
 
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not
-    # present. If the bright foreground color is not set, or
-    # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
-    # color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  # Colors the cursor will use if `custom_cursor_colors` is true
   cursor:
-    text: '#1b2b34'
-    cursor: '#ffffff'
+    text: "#d4e7d4"
+    cursor: "#d4e7d4"
 
   # Normal colors
   normal:
-    black:   '#343d46'
-    red:     '#EC5f67'
-    green:   '#99C794'
-    yellow:  '#FAC863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#d8dee9'
+    black:   "#757575"
+    red:     "#825d4d"
+    green:   "#728c62"
+    yellow:  "#ada16d"
+    blue:    "#4d7b82"
+    magenta: "#8a7267"
+    cyan:    "#729494"
+    white:   "#e0e0e0"
 
   # Bright colors
   bright:
-    black:   '#343d46'
-    red:     '#EC5f67'
-    green:   '#99C794'
-    yellow:  '#FAC863'
-    blue:    '#6699cc'
-    magenta: '#c594c5'
-    cyan:    '#5fb3b3'
-    white:   '#d8dee9'
+    black:   "#8a8a8a"
+    red:     "#cf937a"
+    green:   "#98d9aa"
+    yellow:  "#fae79d"
+    blue:    "#7ac3cf"
+    magenta: "#d6b2a1"
+    cyan:    "#ade0e0"
+    white:   "#e0e0e0"
 
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
-    #focused_match:
-    #  foreground: '#ffffff'
-    #  background: '#000000'
-
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
-
-  # Keyboard regex hints
-  #hints:
-    # First character in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #start:
-    #  foreground: '#1d1f21'
-    #  background: '#e9ff5e'
-
-    # All characters after the first one in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #end:
-    #  foreground: '#e9ff5e'
-    #  background: '#1d1f21'
-
-  # Line indicator
-  #
-  # Color used for the indicator displaying the position in history during
-  # search and vi mode.
-  #
-  # By default, these will use the opposing primary color.
-  #line_indicator:
-  #  foreground: None
-  #  background: None
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #selection:
-  #  text: CellBackground
-  #  background: CellForeground
-
-  # Normal colors
-  #normal:
-  #  black:   '#1d1f21'
-  #  red:     '#cc6666'
-  #  green:   '#b5bd68'
-  #  yellow:  '#f0c674'
-  #  blue:    '#81a2be'
-  #  magenta: '#b294bb'
-  #  cyan:    '#8abeb7'
-  #  white:   '#c5c8c6'
-
-  # Bright colors
-  #bright:
-  #  black:   '#666666'
-  #  red:     '#d54e53'
-  #  green:   '#b9ca4a'
-  #  yellow:  '#e7c547'
-  #  blue:    '#7aa6da'
-  #  magenta: '#c397d8'
-  #  cyan:    '#70c0b1'
-  #  white:   '#eaeaea'
-
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
-
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
+# Colors (Oceanic Next)
+#colors:
+#  # Default colors
+#  primary:
+#    background: '#1b2b34'
+#    foreground: '#d8dee9'
+#
+#    # Bright and dim foreground colors
+#    #
+#    # The dimmed foreground color is calculated automatically if it is not
+#    # present. If the bright foreground color is not set, or
+#    # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
+#    # color will be used.
+#    #dim_foreground: '#828482'
+#    #bright_foreground: '#eaeaea'
+#
+#  # Cursor colors
+#  #
+#  # Colors which should be used to draw the terminal cursor.
+#  #
+#  # Allowed values are CellForeground/CellBackground, which reference the
+#  # affected cell, or hexadecimal colors like #ff00ff.
+#  # Colors the cursor will use if `custom_cursor_colors` is true
+#  cursor:
+#    text: '#1b2b34'
+#    cursor: '#ffffff'
+#
+#  # Normal colors
+#  normal:
+#    black:   '#343d46'
+#    red:     '#EC5f67'
+#    green:   '#99C794'
+#    yellow:  '#FAC863'
+#    blue:    '#6699cc'
+#    magenta: '#c594c5'
+#    cyan:    '#5fb3b3'
+#    white:   '#d8dee9'
+#
+#  # Bright colors
+#  bright:
+#    black:   '#343d46'
+#    red:     '#EC5f67'
+#    green:   '#99C794'
+#    yellow:  '#FAC863'
+#    blue:    '#6699cc'
+#    magenta: '#c594c5'
+#    cyan:    '#5fb3b3'
+#    white:   '#d8dee9'
+#
+#  # Vi mode cursor colors
+#  #
+#  # Colors for the cursor when the vi mode is active.
+#  #
+#  # Allowed values are CellForeground/CellBackground, which reference the
+#  # affected cell, or hexadecimal colors like #ff00ff.
+#  #vi_mode_cursor:
+#  #  text: CellBackground
+#  #  cursor: CellForeground
+#
+#  # Search colors
+#  #
+#  # Colors used for the search bar and match highlighting.
+#  #search:
+#    # Allowed values are CellForeground/CellBackground, which reference the
+#    # affected cell, or hexadecimal colors like #ff00ff.
+#    #matches:
+#    #  foreground: '#000000'
+#    #  background: '#ffffff'
+#    #focused_match:
+#    #  foreground: '#ffffff'
+#    #  background: '#000000'
+#
+#    #bar:
+#    #  background: '#c5c8c6'
+#    #  foreground: '#1d1f21'
+#
+#  # Keyboard regex hints
+#  #hints:
+#    # First character in the hint label
+#    #
+#    # Allowed values are CellForeground/CellBackground, which reference the
+#    # affected cell, or hexadecimal colors like #ff00ff.
+#    #start:
+#    #  foreground: '#1d1f21'
+#    #  background: '#e9ff5e'
+#
+#    # All characters after the first one in the hint label
+#    #
+#    # Allowed values are CellForeground/CellBackground, which reference the
+#    # affected cell, or hexadecimal colors like #ff00ff.
+#    #end:
+#    #  foreground: '#e9ff5e'
+#    #  background: '#1d1f21'
+#
+#  # Line indicator
+#  #
+#  # Color used for the indicator displaying the position in history during
+#  # search and vi mode.
+#  #
+#  # By default, these will use the opposing primary color.
+#  #line_indicator:
+#  #  foreground: None
+#  #  background: None
+#
+#  # Selection colors
+#  #
+#  # Colors which should be used to draw the selection area.
+#  #
+#  # Allowed values are CellForeground/CellBackground, which reference the
+#  # affected cell, or hexadecimal colors like #ff00ff.
+#  #selection:
+#  #  text: CellBackground
+#  #  background: CellForeground
+#
+#  # Normal colors
+#  #normal:
+#  #  black:   '#1d1f21'
+#  #  red:     '#cc6666'
+#  #  green:   '#b5bd68'
+#  #  yellow:  '#f0c674'
+#  #  blue:    '#81a2be'
+#  #  magenta: '#b294bb'
+#  #  cyan:    '#8abeb7'
+#  #  white:   '#c5c8c6'
+#
+#  # Bright colors
+#  #bright:
+#  #  black:   '#666666'
+#  #  red:     '#d54e53'
+#  #  green:   '#b9ca4a'
+#  #  yellow:  '#e7c547'
+#  #  blue:    '#7aa6da'
+#  #  magenta: '#c397d8'
+#  #  cyan:    '#70c0b1'
+#  #  white:   '#eaeaea'
+#
+#  # Dim colors
+#  #
+#  # If the dim colors are not set, they will be calculated automatically based
+#  # on the `normal` colors.
+#  #dim:
+#  #  black:   '#131415'
+#  #  red:     '#864343'
+#  #  green:   '#777c44'
+#  #  yellow:  '#9e824c'
+#  #  blue:    '#556a7d'
+#  #  magenta: '#75617b'
+#  #  cyan:    '#5b7d78'
+#  #  white:   '#828482'
+#
+#  # Indexed Colors
+#  #
+#  # The indexed colors include all colors from 16 to 256.
+#  # When these are not set, they're filled with sensible defaults.
+#  #
+#  # Example:
+#  #   `- { index: 16, color: '#ff00ff' }`
+#  #
+#  #indexed_colors: []
 
 # Bell
 #
